# MCP_server-with-MySQL-DB-

./: .gitignore  README.md  README_DB.md  output.md  pyproject.toml  server.py  test_http.py  test_mcp_basic.py  test_mcp_db_resource.py  test_mcp_final.py  test_mcp_http.py  test_mcp_proper.py  test_mcp_server.py  test_mcp_stdio.py  test_simple.py
.github/: copilot-instructions.md
resources/files/: sample1.txt  sample2.txt
src/simple_mcp_server/: __main__.py  server.py
